--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
 streamlit
+streamlit
+joblib
+pandas
+numpy
+altair
+numpy
+plotly
+pandasql
+openpyxl
+gspread
+st-gsheets-connection
+matplotlib
+git+https://github.com/streamlit/gsheets-connection
